# ai-health-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pubmed-mcp-server.tgz
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/_griffe/: __init__.py  enumerations.py  models.py
backend/health_assistant/: __init__.py  agents.py  evidence.py  main.py  mock_data.py  models.py  storage.py  workflow.py
backend/health_assistant/prompts/: activity.md  gp.md  recovery.md  sleep.md
backend/tests/: test_agents.py  test_evidence.py  test_mock_data.py  test_workflow.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  styles.css  types.ts
