[tool.poetry]
name = "health-assistant-backend"
version = "0.1.0"
description = "Multi-agent health assistant backend"
authors = ["Codex <codex@example.com>"]
packages = [{ include = "health_assistant" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.14"
uvicorn = { extras = ["standard"], version = "0.30.6" }
pydantic = "2.13.0"
langgraph = "0.2.76"
pydantic-ai = "0.0.15"
litellm = "1.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
